[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "dnspython>=2.8.0",
    "fastapi>=0.131.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.16.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
